claude code fix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && npx pagefind --site out --output-subdir _pagefind",
+    "build": "next build --webpack && npx pagefind --site out --output-subdir _pagefind",
     "start": "next start",
     "lint": "eslint",
     "serve": "npx serve out"
