--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
     "pagefind": "^1.4.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
